@@ -1,3 +1,7 @@
+x.x.x (yyyy-mm-dd):
+  - Removed Axiom/axiom/examples/axiom.tac
+  - Added 'axiomatic start'
+
 0.2.0 (2005-10-27):
   - Removed accidental Mantissa dependency
   - Automatic upgrade service added
